ejers día 20 terminados

--- a/Ejercicios sintaxis lenguaje diap/Ejer1.html
+++ b/Ejercicios sintaxis lenguaje diap/Ejer1.html
@@ -12,7 +12,7 @@
             edad: 28,
             altura: 185
         };
-        document.write("El usuario " + persona.nombre);
+        document.write("El usuario " + persona.nombre + " tiene " + persona.edad + " años y mide " + persona.altura + " centímetros.");
     </script>
 </body>
 </html>
