--- a/Ejercicios sintaxis lenguaje diap/MatricesVacilonas.html
+++ b/Ejercicios sintaxis lenguaje diap/MatricesVacilonas.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrices Vacilonas</title>
 </head>
+
 <body>
+    <h1>Matriz vacilona</h1>
+
     <script>
         let tamaño = 5;
-        
+        let matriz = new Array(tamaño);
+
+        for (let i = 0; i < matriz.length; i++) {
+            matriz[i] = new Array(tamaño);
+        }
+
+        for (let i = 0; i < matriz.length; i++) {
+            for (let j = 0; j < matriz[i].length; j++) {
+                if (i === 0 || j === 0) {
+                    matriz[i][j] = 1;
+                } else {
+                    matriz[i][j] = matriz[i - 1][j] + matriz[i][j - 1];
+                }
+            }
+        }
+        console.log(matriz);
     </script>
 </body>
+
 </html>
