--- a/Ejercicios pre RA1/vampus.html
+++ b/Ejercicios pre RA1/vampus.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vampus</title>
 </head>
+
 <body>
     <h1>Array vampiro</h1>
     <script>
-        let arr=[1,2,3,4,5,6,6,5,5,4,3,2,1];
+        let arr = [1, 2, 3, 4, 5, 6, 5, 4, 3, 2, 1];
         /* INCLUYE TU CÓDIGO AQUÍ */
-        
-        function vampus(indice, array) {
-            for (let i = indice; i < array.length; i++) {
-                if (array[i] != array[array.length-1-i]) {
-                    return true;
-                }else{
+
+        function vampus(array) {
+            for (let i = 0; i < array.length/2; i++) {
+                if (array[i] != array[array.length - 1 - i]) {
                     return false;
                 }
+
             }
+            return true;
         }
 
-        console.log(vampus(0,arr));
+        console.log(vampus(arr));
     </script>
 </body>
+
 </html>
