--- a/Ejercicios pre RA1/palabrasOrdenAlfabetico.html
+++ b/Ejercicios pre RA1/palabrasOrdenAlfabetico.html
@@ -19,8 +19,8 @@
                     aux++;
                 }
             }
-            console.log(array[i] + " " + aux + " " + i);
-            //i = i + aux - 1;
+            console.log(array[i] + " " + aux);
+            i = i + aux - 1;
             aux = 0;
         }
     </script>
