--- a/Ejercicios RA4/Reto1.html
+++ b/Ejercicios RA4/Reto1.html
@@ -13,7 +13,7 @@
         aparecerán los mismos números incrementados en la posición que ocupan 1,3,5,7,....
         La función solamente tiene una línea de código.
     </p>
-    <button onclick="dale()">ejecuta</button>
+    <button type="button" onclick="dale()">ejecuta</button>
     <script>
         let numeros = [1, 2, 3, 4, 5, 6, 7];
         let parrafo = document.getElementById("resultado");
