practicando exam ra4

--- a/Ejercicios RA4/Reto0Solucion1.html
+++ b/Ejercicios RA4/Reto0Solucion1.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 
 <body>
-
     <p id="resultado"></p>
     <input type="text" id="ciudad" value="ESTE">
-    <button onclick="dale()">ejecuta</button>
+    <button type="button" onclick="dale()">ejecuta</button>
 
     <script>
         let numeros = [{ cp: 28924, ciudad: 'ESTEPONA' }, { cp: 29601, ciudad: 'MARBELLA' }];
@@ -22,7 +27,6 @@
 
         }
     </script>
-
 </body>
 
 </html>
