--- a/Ejercicios RA4/Reto0Solucion2.html
+++ b/Ejercicios RA4/Reto0Solucion2.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <p>
+        <label for="codP">Introduzca un Codigo Postal</label>
+        <input type="text" name="codP" id="codP" >
+        <button type="button" onclick="buscarPoblacion()">Calcular</button>
+    </p>
+
+    <p id="name"></p>
 
     <script>
         var ciudades = [{ Nombre: "Estepona", CodPostal: 29680 }, { Nombre: "Malaga", CodPostal: 12345 }, { Nombre: "Manilva", CodPostal: 54321 }, { Nombre: "Fuengirola", CodPostal: 11111 }];
@@ -17,16 +24,8 @@
             let ciudad = ciudades.find(c => c.CodPostal == codPostal);
             let obj = document.getElementById('name');
             ciudad != undefined ? obj.innerHTML = ciudad.Nombre : obj.innerHTML = "NO EXISTE";
-        }
+        };
     </script>
-
-    <p>
-        <label for="codP">Introduzca un Codigo Postal</label>
-        <input type="text" name="codP" id="codP" />
-        <button type="button" onclick="buscarPoblacion()">Calcular</button>
-    </p>
-
-    <p id="name"></p>
 </body>
 
 </html>
