--- a/Ejercicios RA4/practicando/recoEjemplos/tortasLocas.html
+++ b/Ejercicios RA4/practicando/recoEjemplos/tortasLocas.html
@@ -22,7 +22,7 @@
 
         // ESCRIBE AQUÍ TU CÓDIGO
         const coloca = (nombre, cuantos) => {
-            console.log(clientaUno + numclientaUno + clientaDos + numclientaDos + clientaTres + numclientaTres)
+            //console.log(clientaUno + numclientaUno + clientaDos + numclientaDos + clientaTres + numclientaTres)
             if (cuantos > numclientaUno) {
                 if (nombre != clientaUno) {
                     clientaTres = clientaDos; numclientaTres = numclientaDos;
