son horas de horas

--- a/Ejercicios RA4/Challenges/Challenge1.html
+++ b/Ejercicios RA4/Challenges/Challenge1.html
@@ -9,8 +9,7 @@
     <script>
         let array = [Maria, Alicia, Alicia, Lorena, Juan, Francisco, Alicia, Juan];
 
-        console.log();
-
+        console.log(array.find(p=> ));
     </script>
 </body>
 </html>
