--- a/Ejercicios RA4/Challenges/Challenge4.html
+++ b/Ejercicios RA4/Challenges/Challenge4.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge 4</title>
 </head>
+
 <body>
-    
+    <script>
+        let arr1 = [9, 9, 8, 1, 2, 3, 3, 4, 5, 6, 7, 8, 9]
+        let arr2 = [2, 3, 4, 5, 6]
+        /*Tienes que contar cuantos elementos del array 1 no están en el array 2. Muestra el resultado por consola*/
+
+        let arr1menos2 = arr1.filter(e => {
+            let aux = arr2.find(n => n == e);
+            if (aux == undefined) {
+                return e;
+            }
+        });
+
+        console.log(arr1menos2);
+
+
+        //Sin duplicados
+        let arrUnico = arr1.filter(e => {
+            let aux = arr2.find(n => n == e);
+            if (aux == undefined) {
+                return e;
+            }
+        }).filter((valActual, iActual, arr) => {
+            let aux = arr.find((val, i) => val === valActual && i < iActual);
+            if (aux == undefined) {
+                return valActual;
+            }
+        });
+
+        console.log(arrUnico);
+
+    </script>
 </body>
+
 </html>
