--- a/Ejercicios RA4/Retos/Reto11.html
+++ b/Ejercicios RA4/Retos/Reto11.html
@@ -10,6 +10,7 @@
 <body>
     <script>
         //Igual que el reto 10 pero cambia el JSON
+        // Realiza una función flecha que dado el nombre de un vikingo diga si fue un rey o no.
         var vikings = '{"vikingos":[{"reino":"Noruega","reyes":["Hakon","Harald",["Ivar",["Olaf","Lars","Lasse"],"Bjorn"],"Ragnar"]},{"reino":"Dinamarca","reyes":["Frodo","Hamming",["Angantyr","Sarunas"],"Horik"]}]}';
         let viks = JSON.parse(vikings);
 
